Added responsive design

--- a/my-site/public/index.html
+++ b/my-site/public/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="author" content="Sean Gaffney">
+    <meta name="contact" content="mail@sgaffney.me">
+    <meta name="copyright" content="Sean Gaffney">
     <script src="https://kit.fontawesome.com/59f6678710.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>my-site</title>
+    <title>Bio</title>
   </head>
   <body>
     <noscript>
