Added accessibility features

--- a/my-site/public/index.html
+++ b/my-site/public/index.html
@@ -7,12 +7,13 @@
     <meta name="author" content="Sean Gaffney">
     <meta name="contact" content="mail@sgaffney.me">
     <meta name="copyright" content="Sean Gaffney">
+    <meta name="robots" content="index, follow">
     <script src="https://kit.fontawesome.com/59f6678710.js" crossorigin="anonymous"></script>
     <title>Bio</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but my-site doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Sorry but this site doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
